dnl Process this file with autoconf to produce a configure script.
AC_INIT(vomit.c)

AC_CONFIG_HEADER(config.h)

dnl Initialize prefix.
if test "$prefix" = "NONE"; then
   prefix="/usr/local"
fi

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.
dnl Checks for libjpeg
AC_MSG_CHECKING(for libjpeg)
AC_ARG_WITH(libjpeg,
[  --with-libjpeg=DIR      use libjpeg in DIR],
[ case "$withval" in
  yes|no)
     AC_MSG_RESULT(no)
     ;;
  *)
     AC_MSG_RESULT($withval)
     if test -f $withval/jpeglib.h -a -f $withval/libjpeg.a; then
        owd=`pwd`
        if cd $withval; then withval=`pwd`; cd $owd; fi
	JPEGINC="-I$withval -I$withval/bpf"
	JPEGLIB="-L$withval -ljpeg"
     elif test -f $withval/include/jpeglib.h -a \
	       -f $withval/lib/libjpeg.a; then
	owd=`pwd`
	if cd $withval; then withval=`pwd`; cd $owd; fi
	JPEGINC="-I$withval/include"
	JPEGLIB="-L$withval/lib -ljpeg"
     else
        AC_ERROR(jpeglib.h or libjpeg.a not found in $withval)
     fi
     ;;
  esac ],
[ if test -f ${prefix}/include/jpeglib.h; then
     JPEGINC="-I${prefix}/include"
     JPEGLIB="-L${prefix}/lib -ljpeg"
  elif test -f /usr/include/jpeg/jpeglib.h; then
     JPEGINC="-I/usr/include/jpeg"
     JPEGLIB="-ljpeg"
  elif test -f /usr/include/jpeglib.h; then
     JPEGLIB="-ljpeg"
  else
     AC_MSG_RESULT(no)
     AC_ERROR(libjpeg not found)
  fi
  AC_MSG_RESULT(yes) ]
)
AC_SUBST(JPEGINC)
AC_SUBST(JPEGLIB)

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_REPLACE_FUNCS(strlcat)

AC_OUTPUT(Makefile)
