dnl Process this file with autoconf to produce a configure script.
AC_INIT(stegdetect.c)

AC_CONFIG_HEADER(config.h)
AC_CANONICAL_SYSTEM

dnl Initialize prefix.
if test "$prefix" = "NONE"; then
   prefix="/usr/local"
fi

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.
AC_SUBST(BFOBJ)
case "$target" in
i386-*-*) BFOBJ=bf-586.o ;;
*) BFOBJ=bf_enc.o;;
esac

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T
AC_CHECK_TYPE(u_int32_t, unsigned int)
AC_CHECK_TYPE(u_int16_t, unsigned short)
AC_CHECK_TYPE(u_int8_t, unsigned char)

dnl Checks for library functions.
AC_REPLACE_FUNCS(strlcat strlcpy)

neederr=no
AC_CHECK_FUNCS(warnx, , [neederr=yes])
if test $neederr = yes; then
   LIBOBJS="$LIBOBJS err.o"
fi

AC_MSG_CHECKING([for timeradd in sys/time.h])
AC_EGREP_CPP(yes,
[
#include <sys/time.h>
#ifdef timeradd
yes
#endif
],      [ AC_DEFINE(HAVE_TIMERADD)
          AC_MSG_RESULT([yes])], AC_MSG_RESULT([no])
)

dnl Other stuff
AC_C_BIGENDIAN

AC_CONFIG_SUBDIRS(jpeg-6b)

AC_OUTPUT(Makefile)
